# dataset-smith

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/: main.py
src/dataset_smith/: cli.py
tests/: test_smoke.py
