[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-smith"
version = "0.1.0"
description = "Dataset ingestion and schema starter generator"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
dataset-smith = "dataset_smith.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
